--- a/src/app/apod-request/apod-request-get/apod-request-get.component.html
+++ b/src/app/apod-request/apod-request-get/apod-request-get.component.html
@@ -1,33 +1,43 @@
-<div>
-    <label>date :</label> <input type="text" #InputDate/>
-    <button (click)="searchApodList(InputDate.value)">
+<div class="search-bar">
+    <label>Specific Date :</label> <input type="text" #specificDate/>
+    <p></p>
+    <label>Start Date :</label> <input type="text" #startedDate/>
+    <label>End Date :</label> <input type="text" #endedDate/>
+    <button 
+      (click) = 
+        "checkSearchResult(specificDate.value, startedDate.value, endedDate.value);
+        searchApodList(specificDate.value, startedDate.value, endedDate.value)"
+    >
         Search</button>
 </div>
-<section *ngIf= "date == '' else showSearchResult" >
+<div *ngIf = "!isResponseIsArray; else showArrayResult">
+  <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title> {{ apodList[0].title}}</mat-card-title>
+        <mat-card-subtitle>{{ apodList[0].date}}</mat-card-subtitle>
+        <button mat-icon-button color="warn" aria-label="Example icon button with a heart icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+      </mat-card-header>
+      <img mat-card-image src="{{ apodList[0].url}}" alt="Photo of {{ apodList[0].title}}">
+      <mat-card-content>
+        {{ apodList[0].explanation}}
+      </mat-card-content>
+  </mat-card>
+</div>
+
+<ng-template #showArrayResult>
     <mat-card class="example-card" *ngFor = "let apod of apodList">
         <mat-card-header >
           <mat-card-title> {{ apod.title}}</mat-card-title>
           <mat-card-subtitle>{{ apod.date}}</mat-card-subtitle>
+            <a  mat-icon-button color="warn" class="button favorite"aria-label="Like Button"
+             href="https://www.google.com/" target="_blank"> <mat-icon>favorite</mat-icon></a>
         </mat-card-header>
         <img mat-card-image src="{{ apod.url}}" alt="Photo of {{ apod.title}}">
         <mat-card-content>
           {{ apod.explanation}}
         </mat-card-content>
     </mat-card>
-</section>
-
-    <section>
-    <mat-card class="example-card" #showSearchResult>
-        <mat-card-header>
-          <mat-card-title> {{ apodSearchResult.title}}</mat-card-title>
-          <mat-card-subtitle>{{ apodSearchResult.date}}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="{{ apodSearchResult.url}}" alt="Photo of {{ apodSearchResult.title}}">
-        <mat-card-content>
-          {{ apod.explanation}}
-        </mat-card-content>
-    </mat-card>
-    
-      
-    </section>
+</ng-template>
 
